2006-12-20 Kimmo
 PATCH: [ 1618452 ] Manual: Add new FAQ item about all lines marked different
  Manual: Faq.xml
 PATCH: [ 1618935 ] Manual: Add screenshots and description for editor margin
  Manual: Compare_files.xml
  Manual/screenshots new files: filecomp_margin1.png filecomp_margin2.png

2006-12-12 Kimmo
 Update revision number to 1.2.9 for new release
  Manual: WinMerge_help.xml

2006-12-11 Tim
 PATCH: [ 1611595 ] Manual: Merge Plugins.xml with readme_users.txt
  Manual: Plugins.xml
 PATCH: [ 1612824 ] Manual: Use italic text for GUI elements
  Manual/css: all.css help.css print.css

2006-12-08 Tim
 PATCH: [ 1610448 ] Manual: Requirements section and layout changes for Plugins
  Manual: Plugins.xml

2006-12-05 Kimmo
 PATCH: [ 1608705 ] Manual: Fix indexterms in Folder Compare
  Manual: Compare_dirs.xml
 PATCH: [ 1608708 ] Manual: Fix indexterms in File Compare
  Manual: Compare_files.xml

2006-12-04 Kimmo
 PATCH: [ 1608003 ] Manual: Fix indexterm position in Quick Start
  Manual: Introduction.xml
 PATCH: [ 1608150 ] Manual: Fix indexterm position in Introduction
  Manual: Quick_start.xml

2006-12-03 Kimmo
 PATCH: [ 1607084 ] Manual: Add new FAQ about missing runtime files
  Manual: Faq.xml

2006-12-01 Kimmo
 PATCH: [ 1605562 ] Manual: Add FAQ items about archive support installation
  Manual: Faq.xml

2006-11-30 Tim
 PATCH: [ 1605673 ] Manual: Minimal changes in Filters.xml
  Manual: Filters.xml

2006-11-29 Tim
 PATCH: [ 1604059 ] Manual: Add missing options to Configuration.xml
  Manual: Configuration.xml

2006-11-27 Kimmo
 PATCH: [ 1603359 ] Manual: FAQ updates
  Manual: Faq.xml
 PATCH: [ 1603385 ] Manual: fix filter file path, clarify template file usage
  Manual: Filters.xml
 PATCH: [ 1603393 ] Improve project file documentation
  Manual: Open_paths.xml
  Manual/screenshots new file: projfile_save.png

2006-11-26 Kimmo
 PATCH: [ 1602658 ] Manual: note about some 7-zip MSI installers missing file
  Manual: Install.xml

2006-11-26 Tim