@@ -1,3 +1,8 @@
+2006-12-30 Tim
+ PATCH: [ 1623604 ] Manual: Remove <screen> from Command_line.xml
+  Manual: Command_line.xml
+  Manual/css: all.css help.css print.css
+
 2006-12-20 Kimmo
  PATCH: [ 1618452 ] Manual: Add new FAQ item about all lines marked different
   Manual: Faq.xml
